# Gen_AI_exchange_AI_Analyst_investors

./: .env  .gitignore  Generation_agent.py  all_extracted_data.json  deal_notes_generation.docx  deal_notes_generation.py  generated_metrics.json  input_agent.py  main.py  metric_generation_agent.py  notes_generation.py  pyproject.toml  requirement.txt  streamlit_app.py  synthetic_data.py  test_input_agent.py
config/prompt/: metric_generation.md
config/prompts/: deal_notes_generation.md
data/input/__MACOSX/02. Naario/: ._01. LV - Checklist (Founders Checklist).docx
